--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -33,6 +33,9 @@ $hle: #028bcc;
 $brm: #184082;
 $drizly: #e12c2c;
 $cpl: #c21f2f;
+$enelx: #461E7D;
+$egp: #008556;
+$penn: #006FBA;
 
 // Secondary Colors
 $light-yellow: #fffbed !default;
