--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -51,3 +51,15 @@
 .card--hle {
   background: $hle;
 }
+
+.card--wind {
+  background: $egp;
+}
+
+.card--calculator {
+  background: $enelx;
+}
+
+.card--pennstater {
+  background: $penn;
+}
