--- a/src/templates/pages/bookmarks.html
+++ b/src/templates/pages/bookmarks.html
@@ -59,17 +59,7 @@ back_text: $ cd ..
           >
         </li>
         <li class="list__item">
-          <a
-            href="https://medium.com/refactoring-ui/7-practical-tips-for-cheating-at-design-40c736799886"
-            >7 Practical Tips for Cheating at Design – Refactoring UI –
-            Medium</a
-          >
-        </li>
-        <li class="list__item">
           <a href="https://spec.fm/specifics/8-pt-grid">Spec - 8-Point Grid</a>
-        </li>
-        <li class="list__item">
-          <a href="http://uxmyths.com/">UX Myths</a>
         </li>
         <li class="list__item">
           <a href="https://www.hugeinc.com/articles/everybody-scrolls"
@@ -139,7 +129,7 @@ back_text: $ cd ..
         </li>
       </ul>
 
-      <h3 class="list-title">Design System</h3>
+     <!--  <h3 class="list-title">Design System</h3>
       <ul class="bookmarks">
         <li class="list__item">
           <a href="https://ux.mailchimp.com/patterns"
@@ -168,7 +158,7 @@ back_text: $ cd ..
         <li class="list__item">
           <a href="https://www.boltdesignsystem.com/">Bolt Design System</a>
         </li>
-      </ul>
+      </ul> -->
 
       <h3 class="list-title">How To</h3>
       <ul class="bookmarks">
@@ -186,7 +176,7 @@ back_text: $ cd ..
             >Badassify your terminal and shell</a
           >
         </li>
-        <li class="list__item">
+        <!-- <li class="list__item">
           <a href="https://www.youtube.com/watch?v=KEkrWRHCDQU"
             >(3) HACKERMAN&#39;S HACKING TUTORIALS - How To Hack Time -
             YouTube</a
@@ -203,11 +193,19 @@ back_text: $ cd ..
             href="https://help.shopify.com/themes/development/getting-started/choosing-an-editor"
             >Theme development tools - Getting started - Shopify Help Center</a
           >
-        </li>
+        </li> -->
       </ul>
 
       <h3 class="list-title">CSS</h3>
       <ul class="bookmarks">
+
+
+        <li class="list__item">
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Relationship_of_Grid_Layout"
+            >Relationship of grid layout to other layout methods</a
+          >
+        </li>        
         <li class="list__item">
           <a
             href="https://www.smashingmagazine.com/2011/12/an-introduction-to-object-oriented-css-oocss/"
@@ -253,7 +251,7 @@ back_text: $ cd ..
 
       <h3 class="list-title">Drupal</h3>
       <ul class="bookmarks">
-        <li class="list__item">
+        <!-- <li class="list__item">
           <a href="https://drushcommands.com/">Drush Commands</a>
         </li>
         <li class="list__item">
@@ -278,7 +276,7 @@ back_text: $ cd ..
           <a href="https://www.eomega.org/search?sort=ds_created%20desc"
             >Drupal React Solr - Search | Omega</a
           >
-        </li>
+        </li> -->
         <li class="list__item">
           <a href="https://www.youtube.com/watch?v=vEvLOwOdDA8"
             >A Partial Decoupling: React + Drupal + Apache Solr FTW! -
@@ -301,14 +299,14 @@ back_text: $ cd ..
 
       <h3 class="list-title">Frontend</h3>
       <ul class="bookmarks">
-        <li class="list__item">
+<!--         <li class="list__item">
           <a
             href="https://github.com/h5bp/Front-end-Developer-Interview-Questions#coding-questions"
             >h5bp/Front-end-Developer-Interview-Questions: A list of helpful
             front-end related questions you can use to interview potential
             candidates, test yourself or completely ignore.</a
           >
-        </li>
+        </li> -->
         <li class="list__item">
           <a
             href="http://internet-map.net/#3-133.7047237286027-114.06984334946307"
@@ -336,12 +334,6 @@ back_text: $ cd ..
             >Spectral, the first parametric Google font by Prototypo.</a
           >
         </li>
-        <li class="list__item">
-          <a
-            href="https://blog.prototypr.io/7-rules-of-using-radio-buttons-vs-drop-down-menus-fddf50d312d1"
-            >7 Rules of Using Radio Buttons vs Drop-Down Menus – Prototypr</a
-          >
-        </li>
       </ul>
 
       <h3 class="list-title">Javascript</h3>
@@ -352,7 +344,7 @@ back_text: $ cd ..
             >A re-introduction to JavaScript (JS tutorial) - JavaScript | MDN</a
           >
         </li>
-        <li class="list__item">
+<!--         <li class="list__item">
           <a
             href="https://howchoo.com/g/mmu0nguznjg/learn-the-slow-and-fast-way-to-append-elements-to-the-dom"
             >Learn the slow (and fast) way to append elements to the DOM -
@@ -364,7 +356,7 @@ back_text: $ cd ..
             href="https://medium.com/@sahilkkrazy/hash-vs-chunkhash-vs-contenthash-e94d38a32208"
             >Hash vs chunkhash vs ContentHash – Sahil Gupta – Medium</a
           >
-        </li>
+        </li> -->
         <li class="list__item">
           <a
             href="https://medium.freecodecamp.org/prototype-in-js-busted-5547ec68872"
@@ -378,22 +370,10 @@ back_text: $ cd ..
             Learn</a
           >
         </li>
-        <li class="list__item">
-          <a
-            href="https://stackoverflow.com/questions/12694530/what-is-typescript-and-why-would-i-use-it-in-place-of-javascript"
-            >What is TypeScript and why would I use it in place of JavaScript? -
-            Stack Overflow</a
-          >
-        </li>
       </ul>
 
       <h3 class="list-title">Email</h3>
       <ul class="bookmarks">
-        <li class="list__item">
-          <a href="http://responsiveemailpatterns.com/"
-            >Responsive Email Patterns</a
-          >
-        </li>
         <li class="list__item">
           <a
             href="https://medium.freecodecamp.org/the-fab-four-technique-to-create-responsive-emails-without-media-queries-baf11fdfa848"
