--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -10,16 +10,16 @@ team:
   - name: Adam Hoyle
     title: Project Manager
   - name: Kyle Langford
-    title: Project Designer, Drupal Developer
+    title: Designer and Developer
 related:
-  - title: Princeton Alumni Magazine
-    description: Design, Drupal Development
-    href: /work/paw
-    abbv: paw
-  - title: Cambridge Public Library
+  - title: Enel X Wind Journey
+    description: Branding, Design, Drupal Development
+    href: /work/wind-journey
+    abbv: wind
+  - title: Demand Response Calculator
     description: Enviromental Signage and Wayfinding.
-    href: /work/cpl
-    abbv: cpl
+    href: /work/calculator
+    abbv: calculator
 ---
 
 {{> intro}}
@@ -29,17 +29,11 @@ related:
     <div class="column two-thirds">
       <article class="content">
         <div class="specimen stretch">
-
-          <picture>
-            <source srcset="../assets/webp/projects/brm/device-mockup-feature.webp" type="image/webp">
-            <source srcset="../assets/img/projects/brm/device-mockup-feature.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/brm/device-mockup-feature.png" alt="Alt Text!" loading="eager">
-          </picture>
-
+          {{picture "projects/brm/device-mockup-feature.png" "" "eager"}}
           <div class="caption"></div>
         </div>
 
-        <h4>Drupal site design and development.</h4>
+        <h4>Drupal Site Design and Development.</h4>
 
         <p>
           <strong>Ask</strong> Bally Ribbon Mills produces a wide variety of
@@ -51,78 +45,43 @@ related:
         </p>
 
         <p>
-          <strong>Outcome</strong> This was my first time as the design and
-          development lead for a web project at Brunello. I worked with Adam
-          Hoyle (Owner) to give Bally an authoritative and clearly laid out site
-          that made connecting with clients easy compared to competitors. I
-          produced the design work which included sitemaps, wireframes,
-          moodboards, and full-page mockups. Site development was done by me
-          using Drupal 7 CMS.
+          <strong>Contribution</strong> I was initialy hired by Brunello to do soup to nuts web sites. I did several of these but the those most successful was Bally Ribbon Mills. I worked with Adam Hoyle (Project Manager) to give Bally an authoritative and clearly laid out site that made connecting with clients easy compared to competitors. I produced the design work which included sitemaps, wireframes, moodboards, and full-page mockups. Site development was done by me using Drupal 7 CMS.
         </p>
 
         <h5>Sitemap</h5>
         <div class="specimen stretch">
-
-          <picture>
-            <source srcset="../assets/img/projects/brm/brm-sitemap_v1.webp" type="image/webp">
-            <source srcset="../assets/img/projects/brm/brm-sitemap_v1.jpg" type="image/jpeg"> 
-            <img src="../assets/img/projects/brm/brm-sitemap_v1.jpg" alt="Alt Text!" class="paper" loading="lazy">
-          </picture>
+          {{picture "projects/brm/brm-sitemap_v1.jpg"}}
         </div>
 
         <h5>Wireframes</h5>
         <div class="specimen">
           <div class="stack">
-            <picture>
-              <source srcset="../assets/webp/projects/brm/brm-wires_page_1.webp" type="image/webp">
-              <source srcset="../assets/img/projects/brm/brm-wires_page_1.png" type="image/jpeg"> 
-              <img src="../assets/img/projects/brm/brm-wires_page_1.png" alt="Alt Text!" loading="lazy">
-            </picture>
-
-            <picture>
-              <source srcset="../assets/webp/projects/brm/brm-wires_page_3.webp" type="image/webp">
-              <source srcset="../assets/img/projects/brm/brm-wires_page_3.png" type="image/jpeg"> 
-              <img src="../assets/img/projects/brm/brm-wires_page_3.png" alt="Alt Text!" loading="lazy">
-            </picture>
+          {{picture "projects/brm/brm-wires_page_1.png"}}
+          {{picture "projects/brm/brm-wires_page_3.png"}}
           </div>
         </div>
 
         <h5>Moodboards</h5>
         <div class="specimen">
-          <picture>
-            <source srcset="../assets/webp/projects/brm/brm_tile-1.webp" type="image/webp">
-            <source srcset="../assets/img/projects/brm/brm_tile-1.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/brm/brm_tile-1.png" alt="Alt Text!" loading="lazy">
-          </picture>
-
+          {{picture "projects/brm/brm_tile-1.png"}}
           <div class="caption"></div>
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/brm/brm_tile-2.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+           {{picture "projects/brm/brm_tile-2.png"}}
+          <div class="caption"></div>
+        </div>
+
+        <div class="specimen">
+           {{picture "projects/brm/design-homepage_v1.jpg"}}
           <div class="caption"></div>
         </div>
 
         <h5 style="text-align:center;">Logo Design</h5>
         <div class="split">
-          <div class="specimen text--center">
-            <img
-              data-src="../assets/img/projects/brm/square-2.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-              loading="lazy"
-            />
-            <img
-              data-src="../assets/img/projects/brm/square-3.jpg"
-              alt="Elephant at sunset"
-              class="paper"
-              loading="lazy"
-            />
+          <div class="specimen flex flex-align--center">
+           <div class="paper">{{picture "projects/brm/square-2.jpg"}}</div>
+           <div class="paper">{{picture "projects/brm/square-3.jpg"}}</div>
           </div>
         </div>
 
