--- a/src/templates/pages/work/environmental-design.html
+++ b/src/templates/pages/work/environmental-design.html
@@ -2,7 +2,7 @@
 meta_title: 'Cambridge Public Library wayfinding and signage | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford for the Cambridge Public Library wayfinding and signage project, work done at Wojciechowski Design.'
 title: Cambridge Public Library
-description: Wayfinding and Signage Design
+description: Environmental Design
 attribution: Work done at Wojciechowski Design
 last-edit: 10.31.19
 back-url: /work/all
@@ -12,14 +12,14 @@ team:
   - name: Kyle Langford
     title: Project Designer
 related:
-  - title: Bally Ribbon Mills
-    description: Branding, Design, Drupal Development
-    href: /work/brm
-    abbv: brm
   - title: Drizly
     description: Design, AngularJS Development
     href: /work/drizly
     abbv: drizly
+  - title: Elev8d Fitness
+    description: Experience Design, Angular Development.
+    href: /work/fitnessapp
+    abbv: elev8d
 ---
 
 {{> intro}}
@@ -28,13 +28,13 @@ related:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
+        
         <div class="specimen stretch">
-          {{picture "projects/cpl/p-cpl.jpg" "Elephant at sunset"}}
-
+          {{picture "projects/cpl/p-cpl.jpg" "" "eager"}}
           <div class="caption">Reverse channel letters on canopy.</div>
         </div>
 
-        <h4>Enviromental Signage.</h4>
+        <h4>Wayfinding and Signage Design</h4>
 
         <p>
           <strong>Ask</strong> The Cambridge Public Library wanted to create a
@@ -55,25 +55,12 @@ related:
           visualizations to present design work to the client for review.
         </p>
 
-        <div class="specimen">
-          <img
-            src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 14'%3E%3C/svg%3E"
-            data-src="../assets/img/projects/cpl/p-cpl-diagram.jpg"
-            style="width: 100%;"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+        <div class="specimen paper">
+          {{picture "projects/cpl/p-cpl-diagram.jpg"}}
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/cpl/exterior-night.jpg"
-            style="width: 100%;"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/exterior-night.jpg"}}
           <div class="caption">
             Photocredit &mdash; Penny Camberville
             <i
@@ -85,12 +72,7 @@ related:
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/cpl/156.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/156.jpg"}}
           <div class="caption">
             Large hanging signs in the hallway that separates the original
             library and the modern section.
@@ -98,66 +80,34 @@ related:
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/cpl/182.jpg"
-            alt="Elephant at sunset"
-            style="width: 100%;"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/182.jpg"}}
           <div class="caption">Large sign going up stairway.</div>
         </div>
 
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/cpl/signs.jpg"
-            style="width: 100%;"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/signs.jpg"}}
           <div class="caption">Drawing Elevation.</div>
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/cpl/180.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/180.jpg"}}
+
           <div class="caption">
             Medium hanging signs on the second floor, top of main stairs.
           </div>
         </div>
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/cpl/profile.jpg"
-            style="width: 100%;"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/profile.jpg"}}
           <div class="caption">Drawing Elevation.</div>
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/cpl/190.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/190.jpg"}}
           <div class="caption">First floor directory.</div>
         </div>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/cpl/171.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/171.jpg"}}
           <div class="caption">Restroom Sign.</div>
         </div>
 
@@ -186,24 +136,12 @@ related:
         </div>
 
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/cpl/outside.jpg"
-            style="width: 100%;"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/outside.jpg"}}
           <div class="caption">Reverse channel letters on canopy.</div>
         </div>
 
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/cpl/garage.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            style="width: 100%;"
-            loading="lazy"
-          />
+          {{picture "projects/cpl/garage.jpg"}}
           <div class="caption">Garage entrance</div>
         </div>
 
