--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -3,7 +3,7 @@ meta_title: 'Elev8d Fitness Angular Video Component and Playlist | Kyle Langford
 meta_description: 'Portfolio example by Kyle Langford for Elev8d Fitness Angular Video Component and Playlist project, work done at Brunello, Inc. '
 title: Elev8d Fitness
 attribution: Work done at Brunello, Inc.
-description: Interaction Design and Angular Development
+description: UI Design and Angular Development
 last-edit: 10.31.19
 back-url: /work/all
 team:
@@ -16,10 +16,10 @@ team:
   - name: Christian Gonzalez
     title: Backend Developer
 related:
-  - title: Drizly
-    description: Design, AngularJS Development
-    href: /work/drizly
-    abbv: drizly
+  - title: Cambridge Public Library
+    description: Enviromental Signage and Wayfinding.
+    href: /work/environmental-design
+    abbv: cpl
   - title: Healthy Living Engine
     description: Design, Drupal Development
     href: /work/hle
@@ -33,11 +33,7 @@ related:
     <div class="column two-thirds">
       <article class="content">
         <div class="specimen stretch">
-          <img
-            src="../assets/img/projects/elev8d/device-mockup-feature.png"
-            alt="Elephant at sunset"
-            loading="eager"
-          />
+          {{picture "projects/elev8d/device-mockup-feature.png"}}
         </div>
 
         <h4>Angular Video Player</h4>
@@ -57,16 +53,12 @@ related:
           was expected. I provided technical leadership to design the
           functionality and UI of the video component. Jay's focus was
           intergrating branding elements and Christian was rebuilding the video
-          API service. I rebuilt the angular video components and created
+          API service. I rebuilt the angular video player and playlist and designed
           transitions and animations to give a more native app feel.
         </p>
 
         <div class="specimen">
-          <img
-            data-src="../assets/img/projects/elev8d/device-mockup-playlist.png"
-            alt="Elephant at sunset"
-            loading="lazy"
-          />
+          {{picture "projects/elev8d/device-mockup-playlist.png"}}
         </div>
 
         <h5>Video Player Demo</h5>
