--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -2,7 +2,7 @@
 meta_title: 'HLE Design and Frontend Development | Kyle Langford'
 meta_description: 'Portfolio example by Kyle Langford on Healthly Living Engine application design and development while at Brunello, inc'
 title: Healthly Living Engine
-description: Drupal Theming and Product Design
+description: Drupal 7/8 and Product Design
 attribution: Work done at Brunello, Inc for Linkwell Health.
 last-edit: 10.31.19
 back-url: /work/all
@@ -12,7 +12,7 @@ team:
   - name: Jason Fournier
     title: Designer
   - name: Kyle Langford
-    title: Frontend Developer
+    title: UX Developer
   - name: Jed
     title: Drupal Developer
   - name: Mike Calebrese
@@ -34,16 +34,13 @@ related:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <p style="text-align: center;">
-          <strong>Healthy Content</strong> Through your Healthplan
-        </p>
+        <span style="text-align: center;">
+          <h5>Healthy Content Hub</h5>
+        </span>
 
         <div class="specimen stretch">
-          <img
-            src="../assets/img/projects/hle/device-mockup-feature.png"
-            alt="Elephant at sunset"
-            loading="eager"
-          />
+          {{picture "projects/hle/device-mockup-feature.png" "" "eager"}}
+          <div class="caption">Plansite 2.0 Design By: Kyle Langford</div>
         </div>
 
         <p>
@@ -58,110 +55,74 @@ related:
         <p>
           <strong>Outcome</strong> We designed a flexible theme that is
           easily customizable and updatable. Content can be packaged and sent to
-          microsites and controlled from a centralized point. We designed easy
-          to use custom backend themes to create content and reports. We
+          microsites and controlled from a centralized point. We designed and built 
+          backend themes and worflow tools to create content and reports. We
           continue to develop features and push the product into the future.
         </p>
 
         <h5>Content Publishing Platform</h5>
 
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/hle/hle_diagram.jpg"
-            alt="Elephant at sunset"
-            class="paper"
-            loading="lazy"
-          />
-          <div class="caption">Infographic - Kyle Langford</div>
+          {{picture "projects/hle/hle_diagram.jpg"}}
+          <div class="caption">Design By: Kyle Langford</div>
         </div>
 
         <div class="specimen">
-          <picture>
-            <source srcset="../assets/webp/projects/hle/optum-mobile.webp" type="image/webp">
-            <source srcset="../assets/img/projects/hle/optum-mobile.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/hle/optum-mobile.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/hle/optum-mobile.png"}}
         </div>
 
-        <div class="split">
-          <div class="specimen" style="text-align: center;">
-            <img
-              data-src="../assets/img/projects/hle/device-mockup-recipe.png"
-              alt="Elephant at sunset"
-              loading="lazy"
-            />
+        <div class="specimen">
+          <div class="split">
+            <div class="specimen" style="text-align: center;">
+              {{picture "projects/hle/device-mockup-recipe.png"}}
+            </div>
+            <div class="specimen">
+              {{picture "projects/hle/device-mockup-shoppinglist.png"}}
+            </div>
           </div>
-          <div class="specimen">
-            <img
-              data-src="../assets/img/projects/hle/device-mockup-shoppinglist.png"
-              alt="Elephant at sunset"
-              loading="lazy"
-            />
-          </div>
+          <div class="caption"></div>
         </div>
 
-        <h5>Base Themes (Kale + Quinoa)</h5>
+        <h5>Customizable Base Themes "Kale" - Plansite 3.0</h5>
 
         <div class="specimen stretch">
-          <picture>
-            <source srcset="../assets/webp/projects/hle/colors.webp" type="image/webp">
-            <source srcset="../assets/img/projects/hle/colors.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/hle/colors.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/hle/colors.png"}}
+          <div class="caption"></div>  
         </div>
 
         <div class="specimen stretch">
-          <picture>
-            <source srcset="../assets/webp/projects/hle/getgoodliving-screen.webp" type="image/webp">
-            <source srcset="../assets/img/projects/hle/getgoodliving-screen.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/hle/getgoodliving-screen.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/hle/getgoodliving-screen.png"}}
+           <div class="caption">Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>    
         </div>
 
         <div class="specimen stretch">
-          <picture>
-            <source srcset="../assets/webp/projects/hle/mmm-screen.webp" type="image/webp">
-            <source srcset="../assets/img/projects/hle/mmm-screen.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/hle/mmm-screen.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/hle/mmm-screen.png"}}
+           <div class="caption">Kyle Langford - Theme Development and Design, Jason Fournier - Design</div>    
         </div>
 
-        <h5>Custom Theme - Renew UHC</h5>
+        <h5>A New Customizable Base Theme "Quinoa"</h5>
 
         <div class="specimen stretch">
-          <picture>
-            <source srcset="../assets/webp/projects/hle/renew.webp" type="image/webp">
-            <source srcset="../assets/img/projects/hle/renew.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/hle/renew.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/hle/renew.png"}}
+           <div class="caption">Kyle Langford - Theme Development, Jason Fournier - Design</div>    
         </div>
 
-        <h5>Custom Theme - UHC</h5>
+        <h5>Fully Custom Theme with Imported React Components</h5>
 
         <div class="specimen stretch">
-          <picture>
-            <source srcset="../assets/webp/projects/hle/optum-store-blog.webp" type="image/webp">
-            <source srcset="../assets/img/projects/hle/optum-store-blog.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/hle/optum-store-blog.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/hle/optum-store-blog.png"}}
+           <div class="caption">Kyle Langford - Theme Development</div>
         </div>
 
         <h5>Custom Backend</h5>
 
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/hle/device-mockup-reports.png"
-            alt="Elephant at sunset"
-            loading="lazy"
-          />
+          {{picture "projects/hle/device-mockup-reports.png"}}
         </div>
 
         <div class="specimen stretch">
-          <img
-            data-src="../assets/img/projects/hle/device-mockup-content.png"
-            alt="Elephant at sunset"
-            loading="lazy"
-          />
+          {{picture "projects/hle/device-mockup-content.png"}}
+          <div class="caption">Kyle Langford - Theme Development and Design</div>
         </div>
 
         {{> credits}}
