--- a/src/templates/pages/work/pennstater.html
+++ b/src/templates/pages/work/pennstater.html
@@ -1,29 +1,29 @@
 ---
-meta_title: 'Wind Journey Landing Page | Kyle Langford'
-meta_description: 'Portfolio example by Kyle Langford for Wind Journey Landing Page , work done at Brunello Inc.'
-title: PennStater
-description: Alumni Magazine
+meta_title: 'PennStater Magazine | Kyle Langford'
+meta_description: 'Portfolio example by Kyle Langford for PennStater Magazine, work done at Brunello Inc.'
+title: PennStater Magazine
+description: Drupal 8 Development
 attribution: Work done at Brunello, Inc.
-last-edit: 12.12.22
+last-edit: 12.23.21
 back-url: /work/all
 team:
   - name: Nicole Baltzer
     title: Project Manager
   - name: Jason Fournier
-    title: Project Designer
+    title: Designer
   - name: Kyle Langford
     title: UX Developer
   - name: Christian Gonzalez
     title: Drupal Developer
 related:
-  - title: Healthy Living Engine
+  - title: Princeton Alumni Magazine
     description: Design, Drupal Development
-    href: /work/hle
-    abbv: hle
-  - title: Bally Ribbon Mills
+    href: /work/paw
+    abbv: paw
+  - title: Enel X Wind Journey
     description: Branding, Design, Drupal Development
-    href: /work/brm
-    abbv: brm
+    href: /work/wind-journey
+    abbv: wind
 ---
 
 {{> intro}}
@@ -34,21 +34,17 @@ related:
       <article class="content">
       
         <div class="specimen stretch">
-          <picture>
-            <source srcset="../assets/webp/projects/penn/penn-screen.webp" type="image/webp">
-            <source srcset="../assets/img/projects/penn/penn-screen.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/penn/penn-screen.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/penn/penn-screen.png" "" "eager"}}
         </div>
 
         <h4>Alumni Magazine</h4>
 
         <p>
-          <strong>Ask </strong> Enel Green Power had a scrolling flash animation that they wanted to convert into a landing page. This included updating the branding to match their current design system.
+          <strong>Ask</strong> Looking for a fresh new design and website PennStater contracted us to make it happen. 
         </p>
 
         <p>
-          <strong>Outcome</strong> Follow the path and see how Enel Green Power develops, builds and operates every project with extensive expertise, while respecting the environment, communities and landowners.
+          <strong>Outcome</strong> Having consulted in the design phases, moving to development was a smooth process. For this project I took the develpment lead and worked with our backend developer Christian to delegate and build out the site. My main contribution was the frontend theme and site building. Worked on estimate and initial pitch.
         </p>
 
         <div class="text--center button-group">
