--- a/src/templates/pages/work/wind-journey.html
+++ b/src/templates/pages/work/wind-journey.html
@@ -4,23 +4,22 @@ meta_description: 'Portfolio example by Kyle Langford for Wind Journey Landing P
 title: Wind Journey
 description: Storyboarding and Javascript Development
 attribution: Work done at Brunello, Inc.
-last-edit: 12.12.22
+last-edit: 12.23.21
 back-url: /work/all
 team:
   - name: Adam Hoyle
     title: Project Manager
   - name: Kyle Langford
-    title: Project Designer, JS Developer
+    title: Project Designer, Developer
 related:
-  - title: Princeton Alumni Magazine
+  - title: PennStater Alumni Magazine
     description: Design, Drupal Development
-    href: /work/paw
-    abbv: paw
-  - title: Cambridge Public Library
-    description: Enviromental Signage and Wayfinding.
-    href: /work/cpl
-    abbv: cpl
-
+    href: /work/pennstater
+    abbv: pennstater
+  - title: Bally Ribbon Mills
+    description: Branding, Design, Drupal Development
+    href: /work/brm
+    abbv: brm
 ---
 
 {{> intro}}
@@ -41,76 +40,48 @@ related:
           </lottie-player>
         </div>
 
-        <h4>Enel Green Power’s Wind Journey in the US and Canada</h4>
+        <h4>SVG Animation (lottiefiles)</h4>
 
         <p>
-          <strong>Ask </strong> Enel Green Power had a scrolling flash animation that they wanted to convert into a landing page. This included updating the branding to match their current design system.
+          <strong>Ask </strong> Enel Green Power had an old scrolling animation that they wanted to update. The script was verbose and the style no longer matched the modern brand. This project was open ended but ultimatly the end result would go on a landing page and link out to other sections. 
         </p>
 
         <p>
-          <strong>Outcome</strong> Follow the path and see how Enel Green Power develops, builds and operates every project with extensive expertise, while respecting the environment, communities and landowners.
+          <strong>Outcome</strong> The content needed a major adaptation in order to fit the layout I envisioned. Adam and I worked with Enel to restructure and boil down the content in sections we defined in our content strategy. From there we storyboarded the scenes and animations. The animated SVG were contracted by a lottie artist. Major contributions were creative direction, animation direction, and implementation. 
         </p>
 
         <div class="specimen">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/screen-top.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/screen-top.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/screen-top.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/screen-top.png" "" "eager"}}
         </div>
 
         <div class="specimen">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/scene-3.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/scene-3.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/scene-3.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/scene-3.png"}}
         </div>
 
         <div class="specimen">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/scene-2.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/scene-2.png" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/scene-2.png" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/scene-2.png"}}
         </div>
 
         <p>
-          <strong>Contribution</strong> Follow the path and see how Enel Green Power develops, builds and operates every project with extensive expertise, while respecting the environment, communities and landowners.
+          Follow the path and see how Enel Green Power develops, builds and operates every project with extensive expertise, while respecting the environment, communities and landowners.
         </p>
 
         <h5>Storyboarding and Art Direction</h5>
 
         <div class="specimen stretch paper">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/design-comp.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/design-comp.jpg" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/design-comp.jpg" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/design-comp.jpg"}}
         </div>
 
         <div class="specimen stretch paper">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/research.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/research.jpg" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/research.jpg" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/research.jpg"}}
         </div>
 
         <div class="specimen stretch paper">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/scene-1.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/scene-1.jpg" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/scene-1.jpg" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/scene-1.png"}}
         </div>
 
         <div class="specimen stretch paper">
-          <picture>
-            <source srcset="../assets/webp/projects/egp/transitions.webp" type="image/webp">
-            <source srcset="../assets/img/projects/egp/transitions.jpg" type="image/jpeg"> 
-            <img src="../assets/img/projects/egp/transitions.jpg" alt="Alt Text!" loading="eager">
-          </picture>
+          {{picture "projects/egp/transitions.jpg"}}
         </div>
 
         <div class="text--center button-group">
