--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -11,9 +11,10 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       <div class="intro-message">
         <h1 class="page__title">Kyle Langford</h1>
         <h2 class="page__sub-title">
+          <br />
           <span class="icon-at-sign"></span>&nbsp;Brunello, Inc.<br />
-          <span class="icon-coffee"></span>&nbsp;Working on.<br />
-          <span class="icon-zap"></span><a href="https://github.com/kylelangford/react-express-basecamp-classic-api">&nbsp; In my spare time.</a><br />
+          <span class="icon-coffee"></span><a href="https://github.com/kylelangford/react-express-basecamp-classic-api">&nbsp;Working on.</a><br />
+          <span class="icon-zap"></span><a href="https://learnvanillajs.com/">&nbsp;In my spare time.</a><br />
           <span class="icon-home"></span>&nbsp;Boston, MA
         </h2>
       </div>
@@ -25,7 +26,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
 
   <div class="row flex flex-align--center fill-height pad-default">
     <div class="column two-thirds animate fade-in">
-      <h2>Frontend Developer</h2>
+      <h2>Design + Development</h2>
       <p class="text--large">
         My name is Kyle Langford I have over 10 years of professional experience designing and developing online websites. I focus on creating easy to use interfaces and writing clean human-readable code. I am passionate about learning new skills and developing my process. I have a positive attitude and enjoy bringing ideas to life.
       </p>
@@ -72,8 +73,8 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       <p class="list-title">User Experience</p>
       <ul class="pretty">
         <li>Wireframing</li>
-        <li>User Heuristics</li>
-        <li>WAGC2.1 Accessibility</li>
+        <li><a href="https://www.nngroup.com/articles/ten-usability-heuristics/">User Heuristics</a></li>
+        <li><a href="https://www.w3.org/TR/WCAG21/">WAGC2.1 Accessibility</a></li>
       </ul>
     </div>
     <!-- Design Tools -->
@@ -131,7 +132,6 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>Wordpress CMS</li>
         <li>Angular, AngularJS</li>
         <li>ReactJS</li>
-        <li>Google Analytics</li>
         <li>Web Hosting</li>
       </ul>
     </div>
@@ -157,20 +157,11 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
           >
         </li>
         <li class="list__item">
-          <a href="https://github.com/kylelangford"
-            ><span class="icon icons-list icon-github"></span>Github</a
-          >
-        </li>
-        <li class="list__item">
-          <a href="https://codepen.io/kylelangford"
-            ><span class="icon icons-list icon-codepen"></span>Codepen</a
-          >
-        </li>
-        <li class="list__item">
           <a href="https://linkedin.com/in/kylelangford"
             ><span class="icon icons-list icon-linkedin"></span>Linkedin</a
           >
         </li>
+
       </ul>
     </div>
     <!-- Locations -->
@@ -186,6 +177,16 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li class="list__item">
           <a href="/assets/resume/kylelangford_resume.pdf"
             ><span class="icons-list icon-download-cloud"></span>Resume</a
+          >
+        </li>
+        <li class="list__item">
+          <a href="https://github.com/kylelangford"
+            ><span class="icon icons-list icon-github"></span>Github</a
+          >
+        </li>
+        <li class="list__item">
+          <a href="https://codepen.io/kylelangford"
+            ><span class="icon icons-list icon-codepen"></span>Codepen</a
           >
         </li>
       </ul>
